Pyrogram -> Telethon and some improvements

--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,17 @@
 API_ID=
 API_HASH=
-
+GLOBAL_CONFIG_PATH=
 
 SLEEP_TIME=
 START_DELAY=
 RANDOM_TAPS_COUNT=
 MIN_ENERGY=
+
 REF_ID=
+
+SESSIONS_PER_PROXY= 1
+USE_PROXY_FROM_FILE= False
+
+DEVICE_PARAMS=
+
+DEBUG_LOGGING=
