Added a setting to disable automatic checking and replacement of non-working proxies before startup

--- a/.env-example
+++ b/.env-example
@@ -9,8 +9,9 @@ MIN_ENERGY=
 
 REF_ID=
 
-SESSIONS_PER_PROXY= 1
-USE_PROXY_FROM_FILE= False
+SESSIONS_PER_PROXY=
+USE_PROXY_FROM_FILE=
+DISABLE_PROXY_REPLACE=
 
 DEVICE_PARAMS=
 
