--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp~=3.9.5
+aiohttp==3.9.5
 aiohttp-proxy==0.1.2
 aiocfscrape==1.0.0
 asyncio==3.4.3
@@ -10,3 +10,4 @@ pydantic-settings==2.4.0
 python-socks==2.5.1
 PySocks==1.7.1
 fasteners
+ua_generator
