--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,13 @@ aiohttp==3.9.5
 aiohttp-proxy==0.1.2
 aiocfscrape==1.0.0
 asyncio==3.4.3
-Brotli==1.1.0
-loguru~=0.7.2
-Telethon==1.36.0
 better-proxy==1.2.0
-pydantic-settings==2.4.0
-python-socks==2.5.1
-PySocks==1.7.1
+Brotli==1.1.0
 fasteners
+loguru~=0.7.2
+opentele==1.15.1
+pydantic-settings==2.4.0
+PySocks==1.7.1
+python-socks==2.5.1
+Telethon==1.36.0
 ua_generator
